--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,8 @@ body{
 	font-family: 'Inconsolata', monospace;
 }
 
-#posteo div p{
-	margin: 0;
-	
-}
+
+
 
 /* estilo header*/
 header{
@@ -43,6 +41,8 @@ h1{
 	padding: 10px;
 	margin-right: 50px;
 	vertical-align: top;
+	border-radius: 10px;
+	opacity: 0.7;
 }
 
 
@@ -54,6 +54,7 @@ h1{
 	height: auto;
 	width: 40%;
 	vertical-align: top;
+	border-radius: 10px;
 }
 
 .contenedor{
@@ -71,7 +72,8 @@ textarea {
 	margin: 0 auto;
 	font-family: 'Inconsolata', monospace;/*no aparece*/
 	font-size: 1em;
-	box-sizing: border-box;
+	
+	overflow: hidden; /* elimina el scroll*/
 
 }
 /* input posteo*/
@@ -117,14 +119,28 @@ button:hover{
 	height: auto;
 	background-color: #E8E8E8;
 	margin:0 auto;
+	margin-bottom: 10px;
+	border-radius: 5px;
+}
+
+
+
+#posteo div p{
+	padding: 10px;
+	margin:0;
 
 }
 
-#posteo div p{
-	padding: 20px;
+#comment{
+	height: auto;
+	height: 40px;
 
 }
 
 .red{
 	color: red;
+}
+
+.blue{
+	color: blue;
 }
